# carob

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/carob-lang/: Cargo.toml  SYNTAX.md
crates/carob-lang/assets/: example.bean
crates/carob-lang/src/: demo.rs  diagnostic.rs  directive.rs  keyword.rs  lib.rs  pos.rs  session.rs  source.rs  span.rs  token.rs
crates/carob-lang/src/lex/: cursor.rs  mod.rs
crates/carob-lang/src/parse/: cursor.rs  mod.rs
