[workspace]
members = [
	"crates/*",
]

[profile.dev]
opt-level = 0
# Only retain line level debug information; This will speed up the build process
# and is only used when debugging.
debug = 1

[profile.release]
lto = "fat"
# Enable all optimizations
opt-level = 3
# Reduces parallel code generation units to increase optimizations
codegen-units = 1
# Dont retain any debug information; This will speed up the build process
# and is only used when debugging.
debug = 0
